--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,10 +2,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	// color: white;
 }
 
 html {
-	color-scheme: dark;
+	background: #081231;
 }
 
 .container {
