--- a/src/components/pages/homeSections/welcome.module.scss
+++ b/src/components/pages/homeSections/welcome.module.scss
@@ -1,36 +1,64 @@
 .welcome {
-	background: #03101c;
-	padding: 80px;
+	// padding: 76px;
+	width: 100%;
 	.content {
-		display: flex;
-		align-items: center;
-		justify-content: space-around;
-		gap: 50px;
+		background: url("../../../assets/images/PHOTO.png");
+		width: 1200px;
+		height: 1400;
+		top: -250px;
+		position: relative;
+		left: 290px;
 
-		h2 {
-			font-family: Montserrat;
-			font-weight: 700;
-			font-size: 48px;
-			line-height: 60px;
-			width: 516;
+		.divBlock {
 			position: relative;
-			bottom: 70px;
-		}
+			top: 600px;
+			right: 205px;
+			h2 {
+				font-family: Montserrat;
+				font-weight: 700;
+				font-size: 58px;
+				line-height: 60px;
+				width: 516;
+				position: relative;
+				bottom: 70px;
+				color: white;
+			}
 
-		p {
-			font-family: Montserrat;
-			font-weight: 500;
-			font-size: 20px;
-			line-height: 25px;
-			width: 419;
-			position: relative;
-			bottom: 40px;
+			p {
+				font-family: Montserrat;
+				font-weight: 500;
+				font-size: 25px;
+				line-height: 26px;
+				width: 419;
+				position: relative;
+				bottom: 40px;
+				color: white;
+			}
 		}
-		img {
-			width: 550px;
-			height: auto;
-			object-fit: cover;
-			position: relative;
+	}
+}
+
+@media (max-width: 768px) {
+	.welcome {
+		.content {
+			display: flex;
+			.divBlock {
+				h2 {
+					font-size: 36px;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	.welcome {
+		.content {
+			.divBlock {
+				h2 {
+					font-size: 24px;
+				}
+			}
 		}
 	}
 }
